# Program-traces

./: .clang-format  CMakeLists.txt  Doxyfile  README.md  config.ini  constants.hpp  main.cpp  os_detection.ini
analysis/evtx/data_model/: event_data.cpp  event_data.hpp  ievent_data.hpp
analysis/evtx/parser/: evtx_parser.cpp  evtx_parser.hpp  ievent_log_parser.hpp
analysis/exceptions/general/: parsing_exception.hpp
analysis/exceptions/prefetch/: data_exception.hpp  file_metric_exception.hpp  prefetch_data_exception.hpp  volume_exception.hpp
analysis/exceptions/registry/: registry_exception.hpp
analysis/logs/evtx/parser/: parser.cpp
analysis/parsers/prefetch/metadata/: file_metric.cpp  file_metric.hpp  volume_info.cpp  volume_info.hpp  volume_type.hpp
analysis/parsers/prefetch/model/: data.cpp  data.hpp  data_builder.cpp  data_builder.hpp  data_storage.hpp  idata.hpp  iprefetch_data.hpp  prefetch_data.hpp  prefetch_data_builder.cpp  prefetch_data_builder.hpp  windows_version.hpp
analysis/parsers/prefetch/parser/: iparser.hpp  parser.cpp  parser.hpp
analysis/parsers/registry/handle/: ikey_value_provider.hpp  key.cpp  key.hpp  key_handle.cpp  value.cpp  value.hpp  value_handle.cpp
analysis/parsers/registry/model/: registry_value.hpp  value_type.hpp
analysis/parsers/registry/parser/: iparser.hpp  iregistry_parser.hpp  parser.cpp  parser.hpp  registry_parser.cpp  registry_parser.hpp
analysis/prefetch/data_model/: data_builder.cpp
analysis/prefetch/exceptions/: file_metric_exception.hpp  parsing_exception.hpp  prefetch_data_exception.hpp  volume_exception.hpp
analysis/prefetch/metadata/: file_metric.cpp  file_metric.hpp  volume_info.cpp  volume_info.hpp
analysis/prefetch/model/: idata.hpp  iprefetch_data.hpp  prefetch_data.cpp  prefetch_data.hpp  prefetch_data_builder.hpp
analysis/prefetch/parser/: iparser.hpp  iprefetch_parser.hpp  prefetch_parser.cpp  prefetch_parser.hpp
analysis/prefetch_file/: prefetch_file_info.cpp  prefetch_file_parser.cpp  prefetch_file_parser.hpp
analysis/registry/: exceptions.hpp  handles.cpp  handles.hpp  interfaces.hpp  models.hpp  registry_parser.cpp  registry_parser.hpp
analysis/registry/data_model/: data.hpp  data_builder.hpp
analysis/registry/handle/: ikey_value_provider.hpp  key_handle.hpp  value_handle.hpp
analysis/registry/parser/: parser.cpp  registry_parser.cpp
core/analysis/os_detection/: os_detection.cpp  os_detection.hpp  os_info.hpp
core/analysis/program_analysis/: windows_disk_analyzer.cpp  windows_disk_analyzer.hpp
core/analysis/program_analysis/amcache/: amcache_analyzer.cpp  amcache_analyzer.hpp
core/analysis/program_analysis/analysis/: autorun_analyzer.cpp  autorun_analyzer.hpp  file_analyzer.hpp  prefetch_analyzer.cpp
core/analysis/program_analysis/autorun/: autorun_analyzer.cpp  autorun_analyzer.hpp
core/analysis/program_analysis/data/: analysis_data.hpp
core/analysis/program_analysis/logs/: eventlog_analyzer.cpp  eventlog_analyzer.hpp
core/analysis/program_analysis/prefetch/: prefetch_analyzer.cpp  prefetch_analyzer.hpp
core/exceptions/: config_exception.hpp  os_detection_exception.hpp  parsing_exception.hpp  prefetch_exception.hpp  registry_exception.hpp
core/os_detection/: ios_detection.hpp  os_detection.cpp  os_detection.hpp  os_info.hpp
exceptions/: file_reader_exceptions.hpp
file_reader/: file_reader.cpp  file_reader.hpp  file_reader_exceptions.hpp
libs/libevt/include/libevt/: definitions.h
libs/libevt/lib/pkgconfig/: libevt.pc
libs/libevtx/lib/pkgconfig/: libevtx.pc
libs/libregf/include/libregf/: definitions.h
libs/libscca/lib/: libscca.la
libs/macos/libevt/lib/: libevt.la
libs/macos/libevtx/include/libevtx/: definitions.h
libs/macos/libevtx/lib/: libevtx.la
libs/macos/libregf/lib/: libregf.la
libs/macos/libregf/lib/pkgconfig/: libregf.pc
libs/macos/libscca/lib/pkgconfig/: libscca.pc
logger/: logger.cpp  logger.hpp  logger_exceptions.hpp
ntfs/: file_analyzer.cpp  file_analyzer.hpp  file_system_manager.cpp  file_system_manager.hpp
parsers/event_log/exceptions/: exceptions.hpp
parsers/event_log/formats/common/: time_converter.cpp  time_converter.hpp  xml_parser.cpp  xml_parser.hpp
parsers/event_log/formats/evt/: parser.cpp  parser.hpp
parsers/event_log/formats/evtx/: parser.cpp  parser.hpp
parsers/event_log/interfaces/: iparser.hpp
parsers/event_log/model/: event_data.cpp  event_data.hpp  event_data_builder.cpp  event_data_builder.hpp  event_level.hpp
parsers/logs/evt/parser/: parser.cpp
parsers/prefetch/data_model/: data_builder.hpp  data_storage.hpp  prefetch_versions.hpp
parsers/prefetch/parser/: iparser.hpp  parser.cpp  parser.hpp
parsers/registry/data_model/: data.cpp  data_builder.cpp  idata.hpp
parsers/registry/data_types/: key.hpp  value.hpp
parsers/registry/parser/: iparser.hpp  parser.cpp  parser.hpp
prefetch_file_analysis/: exceptions.hpp  prefetch_file_info.hpp  prefetch_file_parser.cpp  prefetch_info.hpp  prefetch_parser.cpp  prefetch_parser.hpp
prefetch_file_analysis/info/: file_metric.cpp  file_metric.hpp  volume.cpp  volume.hpp
registry_analysis/: exceptions.hpp  handles.cpp  handles.hpp  interfaces.hpp  models.hpp  registry_analysis.cpp  registry_analysis.hpp  registry_analysis_exceptions.hpp  registry_analyzer.cpp  registry_analyzer.hpp  registry_analyzer_exceptions.hpp  registry_constants.hpp  registry_data_types.hpp  registry_parser.cpp  registry_parser.hpp  registry_structures.hpp  registry_types.hpp  registry_utils.hpp
registry_analyszer/: registry_analyzer.cpp
utils/: utils.hpp
utils/config/: config.cpp  config.hpp  simple_ini.hpp
utils/export/: csv_exporter.cpp  csv_exporter.hpp  iexporter.hpp
utils/logger/: logger.cpp  logger.hpp
utils/logging/: logger.cpp  logger_exception.hpp
